@@ -700,21 +700,12 @@ void MainWorker::GetRaspberryPiTemperature()
 				at10-=(tsen.TEMP.temperatureh*256);
 				tsen.TEMP.temperaturel=(BYTE)(at10);
 
-				// convert now to string form
-				time_t now = time(0);
-				char *szDate = asctime(localtime(&now));
-				szDate[strlen(szDate)-1]=0;
+				CDummy hBase(1000);
+				hBase.HwdType = HTYPE_System;
+				hBase.m_pMainWorker=this;
+				hBase.Name="System";
 
-				WriteMessageStart();
-
-				std::stringstream sTmp;
-				sTmp << szDate << " (System) ";
-				WriteMessage(sTmp.str().c_str(),false);
-				WriteMessage("Temperature",false);
-				unsigned long long DeviceRowIdx=decode_Temp(NULL, 1000, (const tRBUF*)&tsen.TEMP);
-				WriteMessageEnd();
-
-				m_sharedserver.SendToAll(DeviceRowIdx,(const char*)&tsen,tsen.TEMP.packetlength+1,NULL);
+				DecodeRXMessage(&hBase,(const unsigned char*)&tsen);
 			}
 		}
 		infile.close();
